spacing fixed

--- a/dextwelwe/src/App.css
+++ b/dextwelwe/src/App.css
@@ -4,10 +4,10 @@
   src: url(fonts/Questrial-Regular.ttf);
 }
 
-body {
+body, html {
   -webkit-text-size-adjust: 100%;
-}
 
+}
 .fontFamily {
   font-family: dxfont;
 }
@@ -17,44 +17,49 @@ body {
 }
 
 .logo {
+ justify-content: center;
+ align-items: center;
+ display: flex;
  color: #B68D40;
  font-family: dxfont;
  text-align: center;
- font-size: 6vw;
- line-height:4vw;
- margin-bottom: 20px;
+ font-size: 7.5vw;
+ line-height:5vw;
+ margin-bottom: 0.1em;
+ height: auto;
 }
 
 .bg {
   background : #122620;
+  width: 100vw;
   height: 100vh;
 }
 
 #content {
   margin-top: 30vh;
-  width: 30%;
+  width: 37%;
 }
 
 .menuMainPage{
-  display: flex;
   justify-content: space-around;
+  align-items: center;
+  display: flex;
+  border-radius:30em 30em 30em 30em;
   width: 100%;
-  padding: 5px;
-  border-radius:30px 30px 30px 30px;
   background-color: #B68D40;
-
+  height:30%;
 }
 
 .btnView{
 background-color: #B68D40;
 color: #F4EBD0 ;
-font-size: 1vw;
+font-size: 1.3vw;
 border: hidden;
 font-family: dxfont;
 border-radius:12px 12px 12px 12px;
 display: inline-flex;
 justify-content: center;
-align-self: center;
+align-items: center;
 }
 
 .btnView:active, .btnView:hover{
@@ -67,10 +72,22 @@ align-self: center;
   user-select: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
+  .bg {
+   height:100vh;
+  }
+
+  #content {
+    width: 90%;
+   
+  }
+
+
+
   .logo {
     font-size: 16vw;
     margin:6%;
+    height: fit-content;
   }
 
   .menuMainPage{
@@ -78,33 +95,33 @@ align-self: center;
     width: 90%;
     background-color: transparent;
     justify-content: unset;    
+    height: auto;
   }
   .btnView{
     font-size: 5vw;
     width: 100%;
-    padding: 2%;
+    height: 2.5em;
+   
     border-style: none none solid none;
     border-color: #122620;
     position: relative;
-   left : 5.5%;
-    border-radius:30px 30px 30px 30px;
+    left : 5.5%;
+    border-radius:30em 30em 30em 30em;
    }
-  #content {
-    width: 90%;
-  }
+ 
 }
 
-@media screen and (min-width: 601px) and (max-width: 1400px)  {
+@media screen and (min-width:651px) and (max-width: 1400px)  {
  #content {
-  width: 65%;
- }
- 
- .btnView{
-  font-size: 2vw;
+  width: 55%;
  }
 
  .logo {
-  font-size: 13vw;
-  line-height: 7vw;
+  font-size: 11vw;
+  height: 7vw;
+ }
+
+ .btnView{
+  font-size: 1.9vw;
  }
 }
