--- a/dextwelwe/src/menu/project.css
+++ b/dextwelwe/src/menu/project.css
@@ -1,5 +1,6 @@
 .imgProject {
     width: 40%;
+    height: 50%;
 }
 
 .textLanguage{
